src/styles/global.scss
@import "variables";
@import "~bootstrap/scss/bootstrap";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body,
#root,
.App {
  height: 100%;
  width: 100%;
}

p {
  text-align: left;
  margin: 0;
}

img {
  border-radius: 0.25rem;
}

.App {
  font-family: sans-serif;
  text-align: center;
}

.container {
  padding: 24px 0;
}

